#
# Copyright 2015. Triad National Security, LLC. All rights reserved.
#
# Full details and licensing terms can be found in the License file in the main development branch
# of the repository.
#
# MarFS was reviewed and released by LANL under Los Alamos Computer Code identifier: LA-CC-15-039.
#

include_HEADERS = logging.h

noinst_LTLIBRARIES = liblog.la
liblog_la_SOURCES = logging.c

lib_LTLIBRARIES = liblogging.la
liblogging_la_SOURCES = logging.c

